finished updateCulinaryNote servlet and jsp + started working with viewing details of culinary note